@@ -1,3 +1,10 @@
+FROM eclipse-temurin:21-jdk-alpine as build-jdk
+
+COPY jdk-module.info .
+
+RUN jlink --add-modules $(cat jdk-module.info) --strip-java-debug-attributes  \
+    --no-man-pages --no-header-files --output jdk
+
 FROM alpine:3.18
 
 VOLUME /tmp
@@ -5,7 +12,7 @@ VOLUME /tmp
 ARG APPLICATION_USER=spring-app
 
 ENV JAVA_HOME=/jdk
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
+ENV PATH="${PATH}:${JAVA_HOME}/bin"
 
 RUN adduser --no-create-home -u 1000 -D $APPLICATION_USER
 
@@ -16,9 +23,9 @@ USER 1000
 
 WORKDIR /app
 
-COPY jdk $JAVA_HOME
-COPY extracted-jar/dependencies/ ./
+COPY --from=build-jdk jdk $JAVA_HOME
 COPY extracted-jar/spring-boot-loader/ ./
+COPY extracted-jar/dependencies/ ./
 COPY extracted-jar/application/ ./
 
 EXPOSE 8093
